--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
+:root {
+  --main: #FF6600;
+  --primary: #0062ff;
+  --secondary: #6C757D;
+  --success: #3DD598;
+  --warning: #FFC542;
+  --error: #FC5A5A;
+  --secondary-orange: #FF974A;
+  --secondary-blue: #50B5FF;
+  --secondary-green: #82C43C;
+  --secondary-purple: #A461D8;
+  --secondary-pink: #FF9AD5;
+  --dark-0: #FFFFFF;
+  --dark-20: #FAFAFB;
+  --dark-30: #F1F1F5;
+  --dark-40: #E2E2EA;
+  --dark-50: #D5D5DC;
+  --dark-60: #B5B5BE;
+  --dark-70: #92929D;
+  --dark-80: #696974;
+  --dark-90: #44444F;
+  --dark-100: #171725;
+
+  --gray-0: #F5F8FA;
+  --gray-20: #E6ECF0;
+  --gray-100: #657786;
+
+  --fz-regular: 1.6rem;
+  --fz-secondary: 1.4rem;
+  --fz-small: 1.2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+$colors: (
+  "main": #FF6600,
+  "primary": #0062ff,
+  "secondary": #6C757D,
+  "success": #3DD598,
+  "warning": #FFC542,
+  "error": #FC5A5A,
+  "secondary-orange": #FF974A,
+  "secondary-blue": #50B5FF,
+  "secondary-green": #82C43C,
+  "secondary-purple": #A461D8,
+  "secondary-pink": #FF9AD5,
+  "dark-0": #FFFFFF,
+  "dark-20": #FAFAFB,
+  "dark-30": #F1F1F5,
+  "dark-40": #E2E2EA,
+  "dark-50": #D5D5DC,
+  "dark-60": #B5B5BE,
+  "dark-70": #92929D,
+  "dark-80": #696974,
+  "dark-90": #44444F,
+  "dark-100": #171725,
+  "gray-0": #F5F8FA,
+  "gray-20": #E6ECF0,
+  "gray-100": #657786,
+);
+
+$text-fzs: (
+  "regular": 1.6rem,
+  "secondary": 1.4rem,
+  "small": 1.2rem,
+);
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html {
+  font-size: 10px;
+}
+body {
+  font-family: 'Noto Sans TC', 'Montserrat', sans-serif !important;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  color: map-get($colors, "dark-100");
+}
+
+h1,h2,h3,h4,h5 {
+  font-weight: 700;
+}
+h1 {
+  font-size: 6.8rem;
+  line-height: 7.8rem;
+}
+h2 {
+  font-size: 4.2rem;
+  line-height: 5.2rem;
+}
+h3 {
+  font-size: 2.8rem;
+  line-height: 2.6rem;
+}
+h4 {
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+}
+h5 {
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+}
+p {
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  letter-spacing: 0.05rem;
+}
+small {
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+// font-weight
+.fw-bold {
+  font-weight: 700;
+}
+
+@each $name, $text-fz in $text-fzs {
+  // .text-fz-regular, text-fz-secondary
+  .text-fz-#{$name} {
+    font-size: $text-fz !important;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@each $name, $color in $colors {
+  // .color-main, color-secondary
+  .color-#{$name} {
+    color: $color !important;
   }
-  to {
-    transform: rotate(360deg);
+  // .bgc-main, bgc-secondary
+  .bgc-#{$name} {
+    background-color: $color !important;
   }
 }
