--- a/src/App.scss
+++ b/src/App.scss
@@ -81,7 +81,7 @@ body {
   color: map-get($colors, "dark-100");
 }
 
-h1,h2,h3,h4,h5 {
+h1,h2,h3,h4,h5,h6 {
   font-weight: 700;
 }
 h1 {
@@ -102,6 +102,10 @@ h4 {
 }
 h5 {
   font-size: 1.8rem;
+  line-height: 2.6rem;
+}
+h6 {
+  font-size: 1.6rem;
   line-height: 2.6rem;
 }
 p {
